[package]
name = "stock_assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11",features=["json","blocking"]}
clap = { version = "4", features = ["derive"] }
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
ring = "0.17.7"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.19", features = ["serde"] }

[[bin]]
name = "stock_assistant"